--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-testi
+<!DOCTYPE html>
+<html lang="fi">
+    <head>
+        <title>BerryGrove</title>
+        <meta charset="utf-8"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <link href="styles.css" rel="stylesheet">
+    </head>
+    <body>
+        <h1>testi</h1>
+        <div class="dropdown show">
+          <!-- <a class="p-2 text-dark dropdown-toggle" style="font-size:1.25rem;" href= {% url 'link' %}>Link</a> -->
+          <!-- <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> -->
+          <a class="btn btn-secondary dropdown-toggle" href="http://www.is.fi" role="button" id="dropdownMenuLink" aria-haspopup="true" aria-expanded="false">
+            Dropdown link
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </div>
+        testia
+        <br>
+        <br>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+         
+            
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div id="navbarMenu" class="collapse navbar-collapse">
+                <!-- <ul class="navbar-nav"> -->
+                <ul class="nav nav-pills">               
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Pääsivu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Tuotteet</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Yhteystiedot</a>
+                    </li>    
+                    <li class="dropdown">
+                        <a class="btn btn-secondary dropdown-toggle" href="http://www.is.fi" role="button" id="dropdownMenuLink" aria-haspopup="true" aria-expanded="false">
+                            Dropdown link
+                        </a>
+
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <br>
+        <br>
+        testi
+         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+    </body>
+</html> 
