--- a/index.html
+++ b/index.html
@@ -9,23 +9,6 @@
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <h1>testi</h1>
-        <div class="dropdown show">
-          <!-- <a class="p-2 text-dark dropdown-toggle" style="font-size:1.25rem;" href= {% url 'link' %}>Link</a> -->
-          <!-- <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> -->
-          <a class="btn btn-secondary dropdown-toggle" href="http://www.is.fi" role="button" id="dropdownMenuLink" aria-haspopup="true" aria-expanded="false">
-            Dropdown link
-          </a>
-
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </div>
-        testia
-        <br>
-        <br>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
          
             
@@ -36,31 +19,19 @@
                 <!-- <ul class="navbar-nav"> -->
                 <ul class="nav nav-pills">               
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Pääsivu</a>
+                        <a class="nav-link active" href="#">Palvelut</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tuotteet</a>
+                        <a class="nav-link" href="#">Avoin kehittäminen</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Yhteystiedot</a>
-                    </li>    
-                    <li class="dropdown">
-                        <a class="btn btn-secondary dropdown-toggle" href="http://www.is.fi" role="button" id="dropdownMenuLink" aria-haspopup="true" aria-expanded="false">
-                            Dropdown link
-                        </a>
-
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
+                    </li>   
                 </ul>
             </div>
         </nav>
         <br>
         <br>
-        testi
          <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
