--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-         
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <a class="navbar-brand" href="Logo.png">Logo</a>
             
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div id="navbarMenu" class="collapse navbar-collapse">
                 <!-- <ul class="navbar-nav"> -->
-                <ul class="nav nav-pills">               
+                <ul class="nav navbar-nav">               
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Palvelut</a>
                     </li>
