--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <a class="navbar-brand" href="Logo.png">Logo</a>
+            <a class="navbar-brand" href="#">Logo
+                <img src="Logo.png" alt="Logo">   
+            </a>
             
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
                 <span class="navbar-toggler-icon"></span>
