--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <a class="navbar-brand" href="#">Logo
+            <a class="navbar-brand" href="#">
                 <img src="Logo.png" alt="Logo">   
             </a>
             
