--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-right">
             <a class="navbar-brand" href="#">
-                <img src="Logo.png" alt="Logo">   
+                <img src="Logo.png" alt="Logo" style="width: 50px;">   
             </a>
             
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
