--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-right">
+        <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-flex-end">
             <a class="navbar-brand" href="#">
                 <img src="Logo.png" alt="Logo" style="width: 50px;">   
             </a>
